

Neu 1.7.0 - 1/3/15

 -Added a first version of the Neu Java interface. See the updated Neu
  guide for details and the NJObject class, Java classes in neu/java,
  the neu-java command, and test/regress/java1 for an example.

 -Various added methods and minor fixes and changes to nvar.

 -Finished implementation of NML parser token tags and other minor
  fixes and additions to parsers.

 -NERROR() now displays source file name and line number.

 -Added various methods to nstr.

 -An nvar which holds a floating point value will now always be
  printed with a decimal point, e.g "1.0" rather than "1".

Neu 1.6.0 - 12/12/14

 -Added a first version of the Neu Haskell interface which allows
  Haskell code to be run from C++ and allows Haskell code to be
  conveniently constructed dynamically using a familiar N code
  representation. The Haskell interface consists of a parser
  (NHSParser) which parses Haskell code to an N code representation
  and NHSGenerator for going the other direction. The Haskell N code
  can be run() via an NHSObject. The neu-haskell command is a simple
  instantiation of NHSParser and NHSObject, allowing Haskell code to
  be interpreted and using the -show flag, to allow the Haskell N code
  to be viewed. See test/regress/nhs1 for an example.

Neu 1.5.0 - 12/7/14

 -Added the ability to store and restore NObject and its
  subclasses. NObjectBase defines an interface for a "restore
  constructor": NObjectBase(const nvar& v, RestoreFlag) and the
  virtual method: void store(nvar& v). The top-level class should
  define a key "type" in v which gives the name of the stored object
  class, e.g: v["type"] = "MyObject"; (only if this has not already
  been set by a subclass) and then encodes its stored data in an nvar
  keyed on the name of the class, e.g: v["MyObject"][<stored
  attributes>] and last calls store() on its superclasses. NClass now
  defines a static method recreate() that can reconstruct an arbitrary