@@ -2,7 +2,7 @@ include Makefile.defs
 
 export MAJOR = 1
 export MINOR = 7
-export RELEASE = 0
+export RELEASE = 1
 
 export VERSION = $(MAJOR).$(MINOR).$(RELEASE)
 
@@ -38,6 +38,22 @@ libneu_java: libneu_core
 
 concepts: libneu
 	(cd app/concepts/src/lib; $(MAKE))
+
+llvm:
+	rm -rf llvm
+	$(HTTP_GET) http://www.llvm.org/releases/3.5.0/llvm-3.5.0.src.tar.xz
+	$(HTTP_GET) http://www.llvm.org/releases/3.5.0/cfe-3.5.0.src.tar.xz
+	tar xf llvm-3.5.0.src.tar.xz
+	tar xf cfe-3.5.0.src.tar.xz
+	mv llvm-3.5.0.src llvm
+	mv cfe-3.5.0.src llvm/tools/clang
+ifeq ($(PLATFORM), Darwin)
+	cd llvm && export REQUIRES_RTTI=1 && ./configure --enable-libcpp --prefix=$(NEU_HOME)/llvm/build-release && make -j $(BUILD_THREADS) && make install
+else
+	cd llvm && export REQUIRES_RTTI=1 && ./configure --prefix=$(NEU_HOME)/llvm/build-release && make -j $(BUILD_THREADS) && make install
+endif
+	rm llvm-3.5.0.src.tar.xz
+	rm cfe-3.5.0.src.tar.xz
 
 spotless:
 	(cd src/bin/neu; $(MAKE) spotless)
