@@ -5,5 +5,5 @@
   "/usr/local/include"],
  sdk: "/Applications/Xcode.app/Contents/Developer/Platforms/"
  "MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk",
- resourceDir: "$(HOME)/llvm-3.5.0/build-release/lib/clang/3.5.0"
+ resourceDir: "$(NEU_HOME)/llvm/build-release/lib/clang/3.5.0"
 ];
